login form complete

--- a/loginsys/login/templates/login_page.html
+++ b/loginsys/login/templates/login_page.html
@@ -1,12 +1,14 @@
 <h1>login page</h1>
 
 <form text-align="center" action="detection/" method="post">
+{% csrf_token %}
     username: <br>
 <input name="user">
 <br> <br>
 password: <br>
 <input name="password"> 
-<br>
-<input type="submit" value="Submit">
+<br><br>
+<input type="submit" value="login">
 <br>    
 </form>
+<a href="register/", type="button">register</a>
