--- a/loginsys/login/templates/main_screen.html
+++ b/loginsys/login/templates/main_screen.html
@@ -8,13 +8,13 @@
     <script src="/raihan_app/templates/home.js"></script>
 </head>
 <body>
-    <h1 id="title">RAIHAN CODE HOLDER</h1>
+    <h1 id="title">WELCOME TO YOUR CODE HOLDER, ID {{ id_check2 }}</h1>
     <div class="dropbutton">
         <button class="drpbutton">CODES</button>
         <div class="dropbutton_content", id="buttonstyle;">
-            <a href="/raihan_app/add/">PYTHON</a>
-            <a href="#">SQL</a>
-            <a href="#"> Javascript</a>
+            <a href="raihan_app/login/detection/main_app/{{ id_check2 }}/python_codes">PYTHON</a>
+            <a href="raihan_app/login/detection/main_app/{{ id_check2 }}/SQL_codes">SQL</a>
+            <a href="raihan_app/login/detection/main_app/{{ id_check2 }}/Javascript_codes"> Javascript</a>
         </div>
     </div>
     <div class="dropbutton">
