--- a/loginsys/login/templates/login_page.html
+++ b/loginsys/login/templates/login_page.html
@@ -6,7 +6,7 @@
 <input name="user">
 <br> <br>
 password: <br>
-<input name="password"> 
+<input type="password" name="password"> 
 <br><br>
 <input type="submit" value="login">
 <br>    
